# django-online-store

./: .env.example  .flake8  README.md  pyproject.toml
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
catalog/management/commands/: load_test_data.py
catalog/migrations/: 0001_initial.py  0002_contact.py
catalog/templates/: base.html
catalog/templates/catalog/: catalog.html  contacts.html  home.html  menu.html  product_confirm_delete.html  product_create.html  product_detail.html  product_edit.html  product_list.html
catalog/templates/includes/: menu.html
config/: settings.py  urls.py
fixtures/: categories.json  products.json
