[project]
name = "django-online-store"
version = "0.1.0"
description = "Django online store for Skypro homework"
authors = [
    {name = "Viktor84"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "ipython (>=9.13.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)",
    "coverage (>=7.14.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]


[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = [".venv", "migrations"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".venv", "migrations", "__pycache__", "site-packages"]

[tool.coverage.run]
source = ["catalog"]
omit = ["*/migrations/*", "*/tests/*", "*/admin.py", "*/apps.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.poetry]
package-mode = false
name = "django-online-store"
version = "0.1.0"
description = "Django online store project with PostgreSQL"
authors = ["Viktor <your-email@example.com>"]
readme = "README.md"
